syntax = "proto3";

option java_package = "hmda.persistence.serialization";
option optimize_for = SPEED;

message EditDetailsMessage {
    string edit = 1;
    repeated EditDetailsRowMessage rows = 2;
}


message EditDetailsRowMessage {
    string id = 1;
    repeated FieldDetailsMessage fields = 2;
}

message FieldDetailsMessage {
    string name = 1;
    string value = 2;
}
